backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 730335258114.dkr.ecr.ap-northeast-2.amazonaws.com/aira/backend:latest
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: application
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
