frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 730335258114.dkr.ecr.ap-northeast-2.amazonaws.com/aira/frontend:latest
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: application
  annotations:
    #Instance Mode로 대상 그룹에 등록. Pod 기반의 오토스케일링. HPA로 Pod 수가 변경될 때마다 대상 그룹이 자동으로 업데이트
    #로드밸런서는 NLB까지 서비스에서 지원, ALB는 컨트롤러 필요
    service.beta.kubernetes.io/aws-load-balancer-target-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
