gpt-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-worker
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpt-worker
  template:
    metadata:
      labels:
        app: gpt-worker
    spec:
      containers:
      - name: gpt-worker
        image: 730335258114.dkr.ecr.ap-northeast-2.amazonaws.com/aira/gpt_worker:latest
        resources:
          limits:
            cpu: "1000m"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gpt-worker
  namespace: application
  annotations:
    #Instance Mode로 대상 그룹에 등록. Pod 기반의 오토스케일링. HPA로 Pod 수가 변경될 때마다 대상 그룹이 자동으로 업데이트
    service.beta.kubernetes.io/aws-load-balancer-target-type: ip
spec:
  type: LoadBalancer
  selector:
    app: gpt-worker
  ports:
  - name: http
    protocol: TCP
    port: 9000
    targetPort: 9000
