Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  namespace: application
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:730335258114:certificate/251212de-b216-4557-837c-74e8db906759"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
spec:
  tls:
    - hosts:
        - kopmorning.com
      secretName: tls-kopmorning-com  # 일반적으로 dummy secret; ALB는 ACM 인증서를 사용
  rules:
    - host: kopmorning.com
      http:
        paths:
          - path: /frontend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /gpt-worker(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gpt-worker
                port:
                  number: 9000
